<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:forceDarkAllowed="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/top_title" />

    <Button
        android:id="@+id/main_activity_bt3"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/bt_color"
        android:onClick="bt3onClick"
        android:padding="10dp"
        android:text="@string/main_activity_bt3"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/main_activity_bt2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_activity_bt3"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:background="@color/bt_color"
        android:onClick="bt2OnClick"
        android:padding="10dp"
        android:text="@string/main_activity_bt2"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/main_activity_bt1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_activity_bt2"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:background="@color/bt_color"
        android:onClick="bt1OnClick"
        android:padding="10dp"
        android:text="@string/main_activity_bt1"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/main_activity_bt4"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_activity_bt3"
        android:layout_centerInParent="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/bt_color"
        android:onClick="bt4OnClick"
        android:padding="10dp"
        android:text="@string/main_activity_bt4"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/main_activity_bt5"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_activity_bt4"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:background="@color/bt_color"
        android:onClick="bt5OnClick"
        android:padding="10dp"
        android:text="@string/main_activity_bt5"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/ivLicenseAndSert"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:onClick="ivOnClick"
        app:srcCompat="@drawable/license_and_certificates" />
</RelativeLayout>